# dash_val_auto

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260315_0001_initial.py
config/dashboards/: sample_sales.yaml
config/rules/: default_rules.yaml
examples/demo_dashboard/: index.html  product.html  region.html
output/reports/3e3f3d56-aef7-4081-84e0-f154f0b0bd55/: report.html  report.json
output/reports/44bf0e39-a0ea-4b95-b310-03ef58e8e20e/: report.csv  report.html  report.json
output/reports/7ba11de7-b6da-4140-8d3e-25f2423ff292/: report.html  report.json
output/reports/8b30a411-bf57-41b0-a4fa-ce33a678bfa4/: report.csv  report.html  report.json
output/reports/fa874932-ffae-4c66-83bd-05999825404e/: report.html  report.json
output/sqlite/: bi_validator.db
packaging/: bi_validator.spec
scripts/: build_executable.py  run_example_validation.py
src/bi_validator/: launcher.py  main.py
src/bi_validator/api/: __init__.py  routes.py  ui_routes.py
src/bi_validator/core/: __init__.py  config_loader.py  logging.py  runtime.py  security.py  settings.py  utils.py
src/bi_validator/db/: session.py
src/bi_validator/models/: __init__.py  enums.py  run.py
src/bi_validator/schemas/: __init__.py  config.py  run.py
src/bi_validator/services/: __init__.py  dashboard_validation.py
src/bi_validator/services/adapters/: __init__.py  base.py  (+4 more)
src/bi_validator/templates/: app.html.j2  report.html.j2
tests/: test_launch_config.py  test_packaging.py  test_reporting.py  test_validation.py
(+15 files in other folders)
